# PolygonPoints

./: .gitignore  CMakeLists.txt
src/: main.cpp
